NEX-4 build reverse proxy config and add domains to certificate

--- a/reverse-proxy/Dockerfile
+++ b/reverse-proxy/Dockerfile
@@ -2,6 +2,8 @@ FROM alpine:latest
 RUN apk -U upgrade
 RUN apk add --update --no-cache nginx
 
+RUN rm /etc/nginx/http.d/*
+
 EXPOSE 80
 EXPOSE 443
 
