--- a/reverse-proxy/Dockerfile
+++ b/reverse-proxy/Dockerfile
@@ -1,6 +1,8 @@
 FROM alpine:latest
 RUN apk -U upgrade
-RUN apk add --update --no-cache nginx
+RUN apk add --update --no-cache nginx certbot certbot-nginx
+
+RUN rm /etc/nginx/http.d/*
 
 EXPOSE 80
 EXPOSE 443
