NEX-7 add cron job to reverse proxy container to renew certificates every month

--- a/reverse-proxy/Dockerfile
+++ b/reverse-proxy/Dockerfile
@@ -3,6 +3,7 @@ RUN apk -U upgrade
 RUN apk add --update --no-cache nginx certbot certbot-nginx
 
 RUN rm /etc/nginx/http.d/*
+RUN echo "0       0       1       *       *       certbot renew" >> /etc/crontabs/root
 
 EXPOSE 80
 EXPOSE 443
@@ -12,4 +13,4 @@ WORKDIR /root
 RUN apk cache clean
 RUN rm -rf /tmp/* /var/tmp/*
 
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["/bin/sh", "-c", "crond && nginx -g \"daemon off;\""]
